k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
  labels:
    app: recommendation
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0  
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      restartPolicy: Always
      containers:
      - name: recommendation
        image: cluster-registry:32000/recommendation:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "0.50"
            memory: "128Mi"
          requests:
            cpu: "0.20"
            memory: "64Mi"
