k8s/postgres.yaml
# The recommendation database should be created for you, if not here is the command:
# psql -c "create database recommendation;" -U postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql
          resources:
            limits:
              cpu: "0.50"
              memory: "128Mi"
            requests:
              cpu: "0.25"
              memory: "64Mi"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
# This secret can also be created from the command line using environment variables
# export DATABASE_URI='postgresql://<place-url-to-database-here>'
# export POSTGRES_PASSWORD='<place-password-here>'
#
# kubectl create secret generic postgres-creds \
#     --from-literal=password=$POSTGRES_PASSWORD
#     --from-literal=database_uri=$DATABASE_URI
